--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>UMass Amherst AIAA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home | UMass AIAA</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <h1>Welcome to UMass AIAA</h1>
-  <p>Site under construction. Stay tuned!</p>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="join.html">Join</a></li>
+        <li><a href="linktree.html">Linktree</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
+    <p>This is our official website — learn more about our events and how to get involved!</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 UMass Amherst AIAA Student Branch</p>
+  </footer>
 </body>
 </html>
