--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   </header>
   <main>
     <h1>Contact Us</h1>
-    <p>Email: <a href="mailto:aiaa@umass.edu">aiaa@umass.edu</a></p>
+    <p>Email: <a href="mailto:umassaiaa@gmail.com">umassaiaa@gmail.com</a></p>
   </main>
   <footer>
     <p>&copy; 2025 UMass Amherst AIAA Student Branch</p>
