--- a/join.html
+++ b/join.html
@@ -20,8 +20,8 @@
   </header>
   <main>
     <h1>Join Us</h1>
-    <p>Interested in aerospace? Join our chapter to connect with fellow students, attend events, and explore the field.</p>
-    <p><a href="https://forms.gle/your-google-form-link" target="_blank">Fill out our interest form here</a>.</p>
+    <p>Interested in aerospace? Join our chapter to connect with fellow students, attend events, and explore unique opportunities.</p>
+    <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScaPGMyCi4jxGMMa2siNnjY920DK3iZWu1qOHPvUsriwlBxpg/viewform?usp=header" target="_blank">Fill out our interest form here</a>.</p>
   </main>
   <footer>
     <p>&copy; 2025 UMass Amherst AIAA Student Branch</p>
