--- a/join.html
+++ b/join.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Join Us | UMass AIAA</title>
+  <title>Join UMass AIAA | UMass AIAA</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
