--- a/linktree.html
+++ b/linktree.html
@@ -21,8 +21,9 @@
   <main>
     <h1>Connect With Us</h1>
     <ul>
-      <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-      <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
+      <li><a href="https://www.instagram.com/umass_aiaa/" target="_blank">Instagram</a></li>
+      <li><a href="https://www.linkedin.com/in/
+umass-aiaa" target="_blank">LinkedIn</a></li>
       <li><a href="https://notion.so" target="_blank">Notion Workspace</a></li>
       <li><a href="https://minutefund.umass.edu" target="_blank">Minutefund</a></li>
     </ul>
