--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="join.html">Join</a></li>
-        <li><a href="linktree.html">Linktree</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+ <header>
+  <div style="display: flex; align-items: center; justify-content: center; padding: 10px 0;">
+    <img src="aiaa-logo.png" alt="AIAA Logo" style="height: 50px; margin-right: 15px;" />
+    <h1 style="color: white; margin: 0;">UMass Amherst AIAA Student Branch</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="linktree.html">Linktree</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
   <main>
     <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
     <p>This is our official website — learn more about our events and how to get involved!</p>
