--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <header>
   <div style="display: flex; align-items: center; justify-content: center; padding: 10px 0;">
-    <img src="aiaa-logo.png" alt="AIAA Logo" style="height: 50px; margin-right: 15px;" />
+    <img src="AIAA light blue horizontal.png" alt="AIAA Logo" style="height: 50px; margin-right: 15px;" />
     <h1 style="color: white; margin: 0;">UMass Amherst AIAA Student Branch</h1>
   </div>
   <nav>
