--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <li><a href="join.html">Join</a></li>
       <li><a href="linktree.html">Linktree</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="leadership.html">Leadership</a></li>
+
     </ul>
   </nav>
 </header>
