--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a href="linktree.html">Linktree</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="leadership.html">Leadership</a></li>
+      <li><a href="calendar.html">Calendar</a></li>
 
     </ul>
   </nav>
