--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+  <section class="about-section">
+  <h2>About Us</h2>
+  <p>
+    The UMass Amherst AIAA student branch is a community of students passionate about aerospace, innovation, and exploration. As part of the American Institute of Aeronautics and Astronautics (AIAA), we create opportunities for hands-on projects, technical growth, and real-world engineering experience.
+  </p>
+  <p>
+    Our chapter offers project-based learning, facility tours, guest speakers, and networking events designed to prepare students for careers in aviation, rocketry, and space systems. Whether you're studying engineering or simply passionate about aerospace, students of all majors and experience levels are welcome to join.
+  </p>
+</section>
+
  <header>
   <div style="display: flex; align-items: center; justify-content: center; padding: 10px 0;">
     <img src="AIAA light blue horizontal.png" alt="AIAA Logo" style="height: 50px; margin-right: 15px;" />
