--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@
   <main>
     <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
     <p>This is our official website — learn more about our events and how to get involved!</p>
-    <section class="about-section">
-  <h2>About Us</h2>
-  <p>
-    The UMass Amherst AIAA student branch is a community of students passionate about aerospace, innovation, and exploration. As part of the American Institute of Aeronautics and Astronautics (AIAA), we create opportunities for hands-on projects, technical growth, and real-world engineering experience.
-  </p>
-  <p>
-    Our chapter offers project-based learning, facility tours, guest speakers, and networking events designed to prepare students for careers in aviation, rocketry, and space systems. Whether you're studying engineering or simply passionate about aerospace, students of all majors and experience levels are welcome to join.
-  </p>
+   <section class="about-section">
+  <div class="about-box">
+    <h2>About Us</h2>
+    <p>
+      The UMass Amherst AIAA student branch is a community of students passionate about aerospace, innovation, and exploration. As part of the American Institute of Aeronautics and Astronautics (AIAA), we create opportunities for hands-on projects, technical growth, and real-world engineering experience.
+    </p>
+    <p>
+      Our chapter offers project-based learning, facility tours, guest speakers, and networking events designed to prepare students for careers in aviation, rocketry, and space systems. Whether you're studying engineering or simply passionate about aerospace, students of all majors and experience levels are welcome to join.
+    </p>
+  </div>
 </section>
+
 
   </main>
   <footer>
