--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
   </nav>
 </header>
   <main>
-    <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
-    <p>This is our official website — learn more about our events and how to get involved!</p>
+   <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
+<div class="launch-banner">Launch Your Future</div>
+
    <section class="about-section">
   <div class="about-box">
     <h2>About Us</h2>
