--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | UMass AIAA</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 </head>
 <body>
 
@@ -29,6 +31,9 @@
   <main>
    <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
 <div class="launch-banner">Launch Your Future</div>
+<div class="tagline">
+  <h2>Launch Your Future <i class="fas fa-rocket"></i> <i class="fas fa-plane"></i></h2>
+</div>
 
    <section class="about-section">
   <div class="about-box">
