--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 </header>
   <main>
    <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
-<div class="launch-banner">Launch Your Future</div>
-<div class="tagline">
-  <h2>Launch Your Future <i class="fas fa-rocket"></i> <i class="fas fa-plane"></i></h2>
+<div class="launch-banner">
+  <i class="fas fa-rocket"></i> Launch Your Future <i class="fas fa-plane"></i>
 </div>
+
+
 
    <section class="about-section">
   <div class="about-box">
