--- a/join.html
+++ b/join.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <main>
-    <h1>Join Us</h1>
+    <h1>Join UMass AIAA</h1>
     <p>Interested in aerospace? Join our chapter to connect with fellow students, attend events, and explore unique opportunities.</p>
     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScaPGMyCi4jxGMMa2siNnjY920DK3iZWu1qOHPvUsriwlBxpg/viewform?usp=header" target="_blank">Fill out our interest form here</a>.</p>
   </main>
