--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,22 @@
     </nav>
   </header>
   <main>
+  <section class="contact-section">
     <h1>Contact Us</h1>
-    <p>Email: <a href="mailto:umassaiaa@gmail.com">umassaiaa@gmail.com</a></p>
-  </main>
+    
+    <div class="contact-box">
+      <p><strong>Email:</strong> <a href="mailto:umassaiaa@gmail.com">umassaiaa@gmail.com</a></p>
+      
+      <div class="social-links">
+        <p><strong>Follow us:</strong></p>
+        <a href="https://www.instagram.com/YOURUSERNAME" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://www.linkedin.com/in/YOURUSERNAME" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      </div>
+    </div>
+  </section>
+</main>
+
+ 
   <footer>
     <p>&copy; 2025 UMass Amherst AIAA Student Branch</p>
   </footer>
