--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
       
       <div class="social-links">
         <p><strong>Follow us:</strong></p>
-        <a href="https://www.instagram.com/YOURUSERNAME" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-        <a href="https://www.linkedin.com/in/YOURUSERNAME" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="https://www.instagram.com/umass_aiaa/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://www.linkedin.com/in/umass-aiaa" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
       </div>
     </div>
   </section>
