--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+  body.space-background {
+    background-image: url('background.space.png'); /* or 'images/background.space.png' if in subfolder */
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
+    font-family: sans-serif;
+  }
+
+  header, footer {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  h1, h2, p {
+    color: white;
+  }
+
+  nav a {
+    color: #ffffff;
+  }
+</style>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | UMass AIAA</title>
