--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
 </head>
-<body>
+<body class="space-background">
+
 
  <header>
   <div style="display: flex; align-items: center; justify-content: center; padding: 10px 0;">
