--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
   body.space-background {
-    background-image: url('background.space.png'); /* or 'images/background.space.png' if in subfolder */
+    background-image: url('background-space.png'); /* or 'images/background-space.png' if in subfolder */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
