--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html lang="en">
 <head>
   <style>
+  .about-box {
+    background-color: #8C1C13; /* UMass maroon */
+    color: white;
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  }
+
+  .about-box h2 {
+    color: white;
+  }
+
+  .about-box p {
+    font-size: 18px;
+    line-height: 1.6;
+  }
+</style>
+
+  <style>
   body.space-background {
     background-image: url('background-space.png'); /* or 'images/background-space.png' if in subfolder */
     background-size: cover;
