--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     line-height: 1.6;
   }
 </style>
+<style>
+  .about-section {
+    background: transparent; /* Remove white background */
+    padding: 40px 20px;
+    display: flex;
+    justify-content: center;
+  }
+</style>
 
   <style>
   body.space-background {
