--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 </header>
   <main>
    <h1>Welcome to the UMass Amherst AIAA Student Branch</h1>
+    <h1 class="welcome-heading">Welcome to the UMass Amherst AIAA Student Branch</h1>
+
 <div class="launch-banner">
   <i class="fas fa-rocket"></i> Launch Your Future <i class="fas fa-plane"></i>
 </div>
