--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </nav>
 </header>
   <main>
-    <h1 class="welcome-heading">Welcome to the UMass Amherst AIAA Student Branch</h1>
+    <h1 class="welcome-heading">Welcome to the UMass Amherst AIAA Student Chapter</h1>
 
 <div class="launch-banner">
   <i class="fas fa-rocket"></i> Launch Your Future <i class="fas fa-plane"></i>
@@ -92,7 +92,7 @@
   <div class="about-box">
     <h2>About Us</h2>
     <p>
-      The UMass Amherst AIAA student branch is a community of students passionate about aerospace, innovation, and exploration. As part of the American Institute of Aeronautics and Astronautics (AIAA), we create opportunities for hands-on projects, technical growth, and real-world engineering experience.
+      The UMass Amherst AIAA student chapter is a community of students passionate about aerospace, innovation, and exploration. As part of the American Institute of Aeronautics and Astronautics (AIAA), we create opportunities for hands-on projects, technical growth, and real-world engineering experience.
     </p>
     <p>
       Our chapter offers project-based learning, facility tours, guest speakers, and networking events designed to prepare students for careers in aviation, rocketry, and space systems. Whether you're studying engineering or simply passionate about aerospace, students of all majors and experience levels are welcome to join.
@@ -103,7 +103,7 @@
 
   </main>
   <footer>
-    <p>&copy; 2025 UMass Amherst AIAA Student Branch</p>
+    <p>&copy; 2025 UMass Amherst AIAA Student Chapter</p>
 
   </footer>
 </body>
