--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <style>
   body.space-background {
-    background-image: url('background-space.png'); /* or 'images/background-space.png' if in subfolder */
+    background-image: url('background-space.png'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
