--- a/index.html
+++ b/index.html
@@ -99,7 +99,19 @@
     </p>
   </div>
 </section>
+<section id="supporters" style="margin-top: 3rem;">
+  <h1>Our Supporters</h1>
+  <p>
+    We are deeply grateful to the following individuals for their generous
+    contributions to our Minutefund campaign. Your support helps us expand
+    opportunities in aerospace for UMass students.
+  </p>
 
+  <ul style="list-style-type: none; padding: 0; font-size: 1.1rem;">
+    <li>James Holden</li>
+    <li>Kelly Schumann</li>
+  </ul>
+</section>
 
   </main>
   <footer>
