--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   <ul style="list-style-type: none; padding: 0; font-size: 1.1rem;">
     <li>James Holden</li>
     <li>Kelly Schumann</li>
+     <li>Steven Racine</li>
   </ul>
 </section>
 
