--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
     <li>James Holden</li>
     <li>Kelly Schumann</li>
      <li>Steven Racine</li>
+    <li>Linda Lester</li>
+    <li>David Murphy</li>
+    <li>Daniel Racine</li>
+    <li>Brendalee Racine</li>
   </ul>
 </section>
 
