--- a/events.html
+++ b/events.html
@@ -15,12 +15,25 @@
         <li><a href="join.html">Join</a></li>
         <li><a href="linktree.html">Linktree</a></li>
         <li><a href="contact.html">Contact</a></li>
+         <li><a href="contact.html">Leadership</a></li>
+         <li><a href="contact.html">Calendar</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <h1>Events</h1>
-    <p>Check back soon for upcoming events like facility tours, guest speakers, and workshops.</p>
+    <p>
+    - General Body Meeting 1: 09/03
+    - Guest Speaker Todd Barber: 09/10 
+    - General Body Meeting 2: 09/17
+    - Test Devices Facility Tour: 10/26 
+    - October General Body Meeting: 10/01
+    - Aerospace Resume Workshop: 10/09
+    - New England Air Museum Tour: 10/15
+    - Mid-power Rocketry Workshop: 10/22 & 10/29 
+    - November General Body Meeting: 11/05 
+    - Tech Talk: 11/13
+    - December General Body Meeting: 12/03 </p>
   </main>
   <footer>
     <p>&copy; 2025 UMass Amherst AIAA Student Branch</p>
