--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <li><a href="contact.html">Contact</a></li>
       <li><a href="leadership.html">Leadership</a></li>
       <li><a href="calendar.html">Calendar</a></li>
+      <li><a href="donate.html">Donate</a></li>
 
     </ul>
   </nav>
