--- a/events.html
+++ b/events.html
@@ -21,19 +21,27 @@
     </nav>
   </header>
   <main>
-    <h1>Events</h1>
-    <p>
-    - General Body Meeting 1: 09/03
-    - Guest Speaker Todd Barber: 09/10 
-    - General Body Meeting 2: 09/17
-    - Test Devices Facility Tour: 10/26 
-    - October General Body Meeting: 10/01
-    - Aerospace Resume Workshop: 10/09
-    - New England Air Museum Tour: 10/15
-    - Mid-power Rocketry Workshop: 10/22 & 10/29 
-    - November General Body Meeting: 11/05 
-    - Tech Talk: 11/13
-    - December General Body Meeting: 12/03 </p>
+    <h1>Events: Fall 2025</h1>
+     <ul style="list-style-type: none; padding: 0; font-size: 1.1rem;">
+    <li> - General Body Meeting 1: 09/03</li>
+    <li>
+    - Guest Speaker Todd Barber: 09/10 </li>
+     <li> - General Body Meeting 2: 09/17</li>
+    <li> - Test Devices Facility Tour: 10/26 </li>
+    <li>  - October General Body Meeting: 10/01</li>
+    <li>
+    - Aerospace Resume Workshop: 10/09</li>
+    <li>
+    - New England Air Museum Tour: 10/15</li>
+        <li>
+    - Mid-power Rocketry Workshop: 10/22 & 10/29 </li>
+        <li>
+    - November General Body Meeting: 11/05 </li>
+        <li>- Tech Talk: 11/13</li>
+        <li>- December General Body Meeting: 12/03 </li>
+       
+  </ul>
+    
   </main>
   <footer>
     <p>&copy; 2025 UMass Amherst AIAA Student Branch</p>
